wasm/fastq_quality_score_max_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp__eufq4tx/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/cc1f21d53a7ad41a433779d0abefc1faf7cdbe7f.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/cc1f21d53a7ad41a433779d0abefc1faf7cdbe7f.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/e18ed3cbb6af2d70786ace68a68cb591deef9735.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/e18ed3cbb6af2d70786ace68a68cb591deef9735.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/851cdc25ff088c710c37d33d9d25c324cd4ae807.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/851cdc25ff088c710c37d33d9d25c324cd4ae807.json" for subsequent builds)
cache:INFO:  - ok
